Change page structure

--- a/hackathon.html
+++ b/hackathon.html
@@ -22,7 +22,7 @@
       <div class="-header -header-full-page row -center">
         <div class="col-sm-12">
           <a href="https://medium.com/emblatech" class="-embla">
-            <img class="-logo-big" src="./sixteen.png" alt="">
+            <img class="-logo-big" src="./hackathon-banner.png" alt="">
           </a>
           <!-- <h1 class="-h1">Embla Tech</h1> -->
         </div>
