--- a/hackathon.html
+++ b/hackathon.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./hackathon/styles.css">
   </head>
   <body>
 
@@ -22,7 +22,7 @@
       <div class="-header -header-full-page row -center">
         <div class="col-sm-12">
           <a href="https://medium.com/emblatech" class="-embla">
-            <img class="-logo-big" src="./hackathon-banner.png" alt="">
+            <img class="-logo-big" src="./hackathon/hackathon-banner.png" alt="">
           </a>
           <!-- <h1 class="-h1">Embla Tech</h1> -->
         </div>
